--- a/css/style.css
+++ b/css/style.css
@@ -186,10 +186,9 @@ p{
 #section01{
   width: 100%;
   position: relative;
-}
-
-#section01 img{
-  width: 100%;
+  height: 100vh;
+  background-image: url("https://picsum.photos/1920/1080/?random=1");
+  background-position: center;
 }
 
 #section01::before{
@@ -217,15 +216,6 @@ p{
 
 .section01-text span{
   color: var(--myBlue);
-}
-
-@media (max-width: 575px) {
-  .section01-text h1{
-    font-size: 1.5rem;
-  }
-  .section01-text p{
-    font-size: 0.7rem;
-  }
 }
 
 @media (min-width: 992px) {
@@ -885,6 +875,26 @@ footer a:hover{
   height: 10px;
   width: 90%;
   background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.25) 0%, rgba(0, 0, 0, 0) 80%);
+}
 
+/* loading -------------------------------------------------------- */
+
+#loading {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background: rgb(172, 224, 241);
+  display: table;
+  transition: opacity 1s;
+  /* position: absolute; */
+  z-index: 99999;
+  overflow: hidden;
+}
+#loading-inner {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  color: white;
+  font-family: 'Microsoft JHengHei';
 }
 
